--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,17 @@
-<div class="container login-container">
+<div class="login-container">
   <form ngForm #f="ngForm" (submit)="onClickLogin(f)">
     <h3>Login</h3>
 
     <div class="form-group">
-      <input
-        ngModel
-        name="userName"
-        #name="ngModel"
-        type="text"
-        class="form-control"
-        placeholder="Your Email *"
-      />
+      <input ngModel name="userName" #name="ngModel" type="text" class="form-control" placeholder="Your Email *" />
     </div>
     <div class="form-group">
-      <input
-        ngModel
-        name="password"
-        #pwd="ngModel"
-        type="password"
-        class="form-control"
-        placeholder="Your Password *"
-        value=""
-      />
+      <input ngModel name="password" #pwd="ngModel" type="password" class="form-control" placeholder="Your Password *"
+        value="" />
     </div>
     <div class="form-group">
       <input type="submit" class="btnSubmit" value="Login" />
     </div>
-    <p>{{ f.value | json }}</p>
     <div class="form-group">
       <a href="#" class="ForgetPwd">Forget Password?</a>
     </div>
