--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,10 +1,10 @@
 .login-container {
-  margin-bottom: 5%;
+  margin-left: 25%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   color: #333;
   max-width: 480px;
-  margin-top: 25%;
+  margin-top: 5%;
 }
 
 h3 {
