--- a/src/app/majors/majors.component.html
+++ b/src/app/majors/majors.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="currentMajors">
+<div *ngIf="currentMajors" class="container radio-container">
   <h3>Welcome to {{ currentDegree }}. You have to further select the major you are enrolled in</h3>
   <form ngForm #form="ngForm" (submit)="onContinue(form)">
-    <div *ngFor="let major of currentMajors" class="radio">
+    <div *ngFor="let major of currentMajors" class="radio form-group">
       <label>
         <input ngModel type="radio" name="major" [value]="major.id" />
         {{ major.name }}
