--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,6 +1,12 @@
-<h3>{{title}}</h3>
+<h3>{{ title }}</h3>
 <ul class="list-group">
-  <course *ngFor=" let course of courses" [courseId]="course.number" [courseName]="course.courseName">
+  <course
+    *ngFor="let course of courses"
+    [courseId]="course.number"
+    [courseName]="course.courseName"
+  >
   </course>
 </ul>
-<button class="courseButton btn btn-primary">Finish</button>
+<button class="courseButton btn btn-primary" (click)="onClickFinish()">
+  Finish
+</button>
