--- a/src/app/selection-menu/selection-menu.component.html
+++ b/src/app/selection-menu/selection-menu.component.html
@@ -1,14 +1,19 @@
-<div *ngIf="majorId" class="container radio-container">
+<div *ngIf="majorId" class="radio-container">
   <h1>Welcome {{ student.name }}, How may I help you today?</h1>
-  <form ngForm #form="ngForm" (submit)="onContinue(form)">
-    <div class="radio form-group radio-container" *ngFor="let selection of selectionMapping">
-      <label>
-        <input ngModel name="selection" type="radio" [value]="selection.id" />
-        {{ selection.message }}
-      </label>
-    </div>
-    <button class="btn btn-primary">Submit</button>
-  </form>
+  <div class="selection-container">
+    <form ngForm #form="ngForm" (submit)="onContinue(form)">
+      <div
+        class="radio form-group radio-container"
+        *ngFor="let selection of selectionMapping"
+      >
+        <label>
+          <input ngModel name="selection" type="radio" [value]="selection.id" />
+          {{ selection.message }}
+        </label>
+      </div>
+      <button class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 </div>
 <div *ngIf="!majorId">
   Please select a major first!
