--- a/src/app/components/courses/prerequisite-courses/prerequisite-courses.component.html
+++ b/src/app/components/courses/prerequisite-courses/prerequisite-courses.component.html
@@ -1,1 +1,1 @@
-<courses [title]="title" [courses]="courses"></courses>
+<courses [title]="title" [courses]="courses" [showPreRequisites]="true"></courses>
