Add the remaining courses component

--- a/src/app/components/courses/prerequisite-course/prerequisite-course.component.html
+++ b/src/app/components/courses/prerequisite-course/prerequisite-course.component.html
@@ -1,4 +1,4 @@
-<li class="list-group-item register" (click)="onClickCourse()">
+<li class="list-group-item togglable-course" (click)="onClickCourse()">
   <span>{{ courseId }} {{ courseName }}</span>
   <span class="oi oi-chevron-bottom" *ngIf="!isPreRequisitesShown"></span>
   <span class="oi oi-chevron-top" *ngIf="isPreRequisitesShown"></span>
