--- a/src/app/components/courses/eligible-courses/eligible-courses.component.html
+++ b/src/app/components/courses/eligible-courses/eligible-courses.component.html
@@ -1,1 +1,1 @@
-<courses [title]="title" [courses]="courses"></courses>
+<courses [title]="title" [courses]="courses" [allowRegister]="true"></courses>
