--- a/src/app/components/semester-map/semester-map.component.html
+++ b/src/app/components/semester-map/semester-map.component.html
@@ -1,33 +1,30 @@
-<h3>Welcome {{studen.name}}. The following is the map of your semester.</h3>
+<h3>{{ title }}</h3>
 <div class="table table-bordered">
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">First Year</th>
-                <th scope="col">Second Year</th>
-                <th scope="col">Third Year</th>
-                <th scope="col">Fourth Year</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td>@twitter</td>
-            </tr>
-            <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td>@twitter</td>
-            </tr>
-            <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-                <td>@twitter</td>
-            </tr>
-        </tbody>
-    </table>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">First Year</th>
+        <th scope="col">Second Year</th>
+        <th scope="col">Third Year</th>
+        <th scope="col">Fourth Year</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Semester 1</td>
+        <td>Semester 3</td>
+        <td>Semester 5</td>
+        <td>Semester 7</td>
+      </tr>
+      <tr>
+        <td>Semester 2</td>
+        <td>Semester 4</td>
+        <td>Semester 6</td>
+        <td>Semester 8</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+<button class="courseButton btn btn-primary" (click)="onClickFinish()">
+  Finish
+</button>
