--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Learning Management System</a>
+<nav class="navbar navbar-expand-lg navbar-light colored-navbar">
+  <a class="navbar-brand" routerLink="/">Learning Management System</a>
   <button
     class="navbar-toggler"
     type="button"
