--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,17 +3,36 @@
     <h3>Login</h3>
 
     <div class="form-group">
-      <input ngModel name="userName" #name="ngModel" type="text" class="form-control" placeholder="Your Email *" />
+      <input
+        ngModel
+        name="userName"
+        #name="ngModel"
+        type="text"
+        class="form-control"
+        placeholder="Your Email *"
+        (focus)="onFocus()"
+      />
     </div>
     <div class="form-group">
-      <input ngModel name="password" #pwd="ngModel" type="password" class="form-control" placeholder="Your Password *"
-        value="" />
+      <input
+        ngModel
+        name="password"
+        #pwd="ngModel"
+        type="password"
+        class="form-control"
+        placeholder="Your Password *"
+        value=""
+        (focus)="onFocus()"
+      />
+      <div class="alert alert-danger" *ngIf="error">
+        User name or password invalid!
+      </div>
     </div>
     <div class="form-group">
       <input type="submit" class="btnSubmit" value="Login" />
     </div>
     <div class="form-group">
-      <a href="#" class="ForgetPwd">Forget Password?</a>
+      <a routerLink="/advisorLogin  " class="ForgetPwd">Login as Advisor</a>
     </div>
   </form>
 </div>
