add styling for courses

--- a/src/app/components/courses/courses.component.scss
+++ b/src/app/components/courses/courses.component.scss
@@ -23,7 +23,15 @@ div {
   background: #444;
 }
 
-.courseButton{
-  margin-left: 35%;
+.courseButton {
+  margin-left: 11%;
   margin-top: 3%;
+  margin-right: 11%;
+}
+
+.courses-container {
+  margin-left: 33.33%;
+  margin-top: 5%;
+  width: 33.33%;
+  height: 60%;
 }
