--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -1,29 +1,31 @@
-<h3>{{ title }}</h3>
-<ul class="list-group" *ngIf="!allowRegister && !showPreRequisites">
-  <course
-    *ngFor="let course of courses"
-    [courseId]="course.number"
-    [courseName]="course.courseName"
-  >
-  </course>
-</ul>
-<ul class="list-group" *ngIf="allowRegister">
-  <registerable-course
-    *ngFor="let course of courses"
-    [courseId]="course.number"
-    [courseName]="course.courseName"
-  >
-  </registerable-course>
-</ul>
-<ul class="list-group" *ngIf="showPreRequisites">
-  <prerequisite-course
-    *ngFor="let course of courses"
-    [courseId]="course.number"
-    [courseName]="course.courseName"
-    [prerequisites]="course.prerequisites"
-  >
-  </prerequisite-course>
-</ul>
-<button class="courseButton btn btn-primary" (click)="onClickFinish()">
-  Finish
-</button>
+<div class="courses-container card">
+  <h3>{{ title }}</h3>
+  <ul class="list-group" *ngIf="!allowRegister && !showPreRequisites">
+    <course
+      *ngFor="let course of courses"
+      [courseId]="course.number"
+      [courseName]="course.courseName"
+    >
+    </course>
+  </ul>
+  <ul class="list-group" *ngIf="allowRegister">
+    <registerable-course
+      *ngFor="let course of courses"
+      [courseId]="course.number"
+      [courseName]="course.courseName"
+    >
+    </registerable-course>
+  </ul>
+  <ul class="list-group" *ngIf="showPreRequisites">
+    <prerequisite-course
+      *ngFor="let course of courses"
+      [courseId]="course.number"
+      [courseName]="course.courseName"
+      [prerequisites]="course.prerequisites"
+    >
+    </prerequisite-course>
+  </ul>
+  <button class="courseButton btn btn-primary" (click)="onClickFinish()">
+    Finish
+  </button>
+</div>
