--- a/src/app/components/degrees/degrees.component.html
+++ b/src/app/components/degrees/degrees.component.html
@@ -1,7 +1,7 @@
-<div class="container  radio-container">
+<div class="container  radio-container card">
   <h3>Please select the degree you are enrolled in.</h3>
   <form ngForm #form="ngForm" (submit)="onContinue(form)">
-    <div *ngFor="let degree of degrees" class="radio form-group">
+    <div *ngFor="let degree of degrees" class="radio form-group heading">
       <label>
         <input ngModel type="radio" name="degree" [value]="degree.id" />
         {{ degree.name }}
