--- a/src/app/components/selection-menu/selection-menu.component.html
+++ b/src/app/components/selection-menu/selection-menu.component.html
@@ -1,11 +1,8 @@
-<div *ngIf="majorId" class="radio-container">
+<div *ngIf="majorId" class="selection-outer-container">
   <h1>Welcome {{ student.name }}, How may I help you today?</h1>
   <div class="selection-container">
     <form ngForm #form="ngForm" (submit)="onContinue(form)">
-      <div
-        class="radio form-group radio-container"
-        *ngFor="let selection of selectionMapping"
-      >
+      <div class="radio form-group" *ngFor="let selection of selectionMapping">
         <label>
           <input ngModel name="selection" type="radio" [value]="selection.id" />
           {{ selection.message }}
