--- a/src/app/components/selection-menu/selection-menu.component.scss
+++ b/src/app/components/selection-menu/selection-menu.component.scss
@@ -1,7 +1,15 @@
 .selection-container {
   text-align: left;
+  padding-left: 30px;
 }
 
 label {
   width: 100%;
+}
+
+.selection-outer-container {
+  align-items: center;
+  display: flex;
+  margin-top: 5%;
+  margin-left: 5%;
 }
