--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,13 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  margin-top: 5%;
+}
+
+.list-group {
+  max-height: 400px;
+  margin-bottom: 10px;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
