--- a/src/app/components/register-student/register-student.component.html
+++ b/src/app/components/register-student/register-student.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="register-container container card">
   <h3>{{ title }}</h3>
   <form ngForm #form="ngForm" (submit)="onContinue(form)">
     <div class="form-group">
@@ -8,7 +8,7 @@
         #name="ngModel"
         type="text"
         class="form-control"
-        placeholder="Advisor name"
+        placeholder="Advisor's name"
       />
     </div>
     <div class="form-group">
@@ -22,8 +22,6 @@
         value=""
       />
     </div>
-    <div class="form-group">
-      <input type="submit" class="btnSubmit" value="Send Email" />
-    </div>
+    <button class="btn btn-primary">Send Email</button>
   </form>
 </div>
