Complete api implementation for degree page

--- a/src/app/components/degrees/degrees.component.html
+++ b/src/app/components/degrees/degrees.component.html
@@ -1,12 +1,17 @@
-<div class="container  radio-container card">
-  <h3>Please select the degree you are enrolled in.</h3>
-  <form ngForm #form="ngForm" (submit)="onContinue(form)">
-    <div *ngFor="let degree of degrees" class="radio form-group heading">
-      <label>
-        <input ngModel type="radio" name="degree" [value]="degree.id" />
-        {{ degree.name }}
-      </label>
-    </div>
-    <button class="btn btn-primary">Continue</button>
-  </form>
+<div *ngIf="degrees">
+  <div class="container  radio-container card">
+    <h3>Please select the degree you are enrolled in.</h3>
+    <form ngForm #form="ngForm" (submit)="onContinue(form)">
+      <div *ngFor="let degree of degrees" class="radio form-group heading">
+        <label>
+          <input ngModel type="radio" name="degree" [value]="degree.id" />
+          {{ degree.name }}
+        </label>
+      </div>
+      <button class="btn btn-primary">Continue</button>
+    </form>
+  </div>
+</div>
+<div *ngIf="!degrees">
+  Something happened!!
 </div>
