--- a/src/app/components/majors/majors.component.html
+++ b/src/app/components/majors/majors.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="currentMajors" class="container radio-container card">
   <h3>
-    Welcome to {{ currentDegree }}. You have to further select the major you are
-    enrolled in
+    Welcome to {{ currentDegree.name }}. You have to further select the major
+    you are enrolled in
   </h3>
   <form ngForm #form="ngForm" (submit)="onContinue(form)">
     <div *ngFor="let major of currentMajors" class="radio form-group">
