--- a/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
+++ b/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
@@ -31,7 +31,7 @@
               *ngIf="course.registered"
             ></span>
           </td>
-          <td>{{ course.courseName }}</td>
+          <td>{{ course.name }}</td>
           <td>{{ course.credits }}</td>
           <td>
             {{ (course.prerequisites && course.prerequisites.name) || null }}
