--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,17 +13,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home</a>
-      </li>
       <li class="nav-item ">
         <a class="nav-link" routerLink="/">Log In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Hi Guest</a>
+        <a class="nav-link" routerLink="/">Log Out</a>
       </li>
     </ul>
   </div>
