Add styles for warning messages

--- a/src/app/components/degrees/degrees.component.html
+++ b/src/app/components/degrees/degrees.component.html
@@ -12,6 +12,6 @@
     </form>
   </div>
 </div>
-<div *ngIf="!degrees">
-  Something happened!!
+<div *ngIf="!degrees" class="warning">
+  Something Went Wrong! Please try again later.
 </div>
