--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <degrees (degreeSelect)="onDegreeSelect($event)"></degrees>
-<majors [currentDegree]="currentDegree" ></majors> -->
-<navbar></navbar>
-<router-outlet></router-outlet>
+<navbar></navbar> <router-outlet></router-outlet>
