--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,10 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
+
+.warning {
+  color: red;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 30%;
+}
