--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -20,8 +20,8 @@
     <prerequisite-course
       *ngFor="let course of courses"
       [courseId]="course.number"
-      [courseName]="course.courseName"
-      [prerequisites]="course.prerequisites"
+      [courseName]="course.name"
+      [prerequisite]="course.prerequisite"
     >
     </prerequisite-course>
   </ul>
