Complete most cases

--- a/src/app/components/courses/registerable-course/registerable-course.component.html
+++ b/src/app/components/courses/registerable-course/registerable-course.component.html
@@ -8,5 +8,7 @@
   [hidden]="!isRegisterShown"
 >
   <p>Register for the course</p>
-  <button class="btn btn-secondary">Register</button>
+  <button class="btn btn-secondary" (click)="onClickRegister()">
+    Register
+  </button>
 </li>
