--- a/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
+++ b/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
@@ -34,7 +34,7 @@
           <td>{{ course.name }}</td>
           <td>{{ course.credits }}</td>
           <td>
-            {{ (course.prerequisites && course.prerequisites.name) || null }}
+            {{ course.prerequisite && course.prerequisite.courseId }}
           </td>
         </tr>
       </tbody>
