--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -4,7 +4,7 @@
     <course
       *ngFor="let course of courses"
       [courseId]="course.number"
-      [courseName]="course.courseName"
+      [courseName]="course.name"
     >
     </course>
   </ul>
@@ -12,7 +12,7 @@
     <registerable-course
       *ngFor="let course of courses"
       [courseId]="course.number"
-      [courseName]="course.courseName"
+      [courseName]="course.name"
     >
     </registerable-course>
   </ul>
