--- a/src/app/components/register-student/register-student.component.html
+++ b/src/app/components/register-student/register-student.component.html
@@ -1,27 +1,16 @@
 <div class="register-container container card">
   <h3>{{ title }}</h3>
-  <form ngForm #form="ngForm" (submit)="onContinue(form)">
-    <div class="form-group">
-      <input
-        ngModel
-        name="advisorName"
-        #name="ngModel"
-        type="text"
-        class="form-control"
-        placeholder="Advisor's name"
-      />
-    </div>
-    <div class="form-group">
-      <input
-        ngModel
-        name="advisorEmail"
-        #pwd="ngModel"
-        type="text"
-        class="form-control"
-        placeholder="Advisor's Email"
-        value=""
-      />
-    </div>
-    <button class="btn btn-primary">Send Email</button>
-  </form>
+
+  <input
+    ngModel
+    name="advisorEmail"
+    #email="ngModel"
+    type="text"
+    class="form-control"
+    placeholder="Advisor's Email"
+  />
+
+  <button class="btn btn-primary" (click)="onContinue(email)">
+    Send Email
+  </button>
 </div>
