Fix all student functions

--- a/src/app/components/completed-and-remaining-courses/completed-and-remaining-courses.component.html
+++ b/src/app/components/completed-and-remaining-courses/completed-and-remaining-courses.component.html
@@ -41,7 +41,7 @@
             <span>{{ completedCourse.number }}</span>
           </td>
           <td>
-            <span>{{ completedCourse.AcademicTerm }}</span>
+            <span>{{ completedCourse.semester.season }}</span>
           </td>
         </tr>
       </tbody>
