--- a/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
+++ b/src/app/components/courses/summary-of-courses/summary-of-courses.component.html
@@ -25,7 +25,7 @@
             ></span>
           </td>
           <td>
-            {{ course.course.substitute && course.course.substitute.name }}
+            {{ course.substitute && course.substitute.name }}
           </td>
           <td>
             <span
