--- a/src/app/components/courses/registerable-course/registerable-course.component.html
+++ b/src/app/components/courses/registerable-course/registerable-course.component.html
@@ -9,6 +9,6 @@
 >
   <p>Register for the course</p>
   <button class="btn btn-secondary" (click)="onClickRegister()">
-    Register
+    Select
   </button>
 </li>
